# LiveContext

./: .gitignore  ORCHESTRATOR_LOG.md  README.md  demo.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ContextStream.tsx  SessionSelector.tsx  TimelineScrubber.tsx  TokenGauge.tsx
frontend/src/hooks/: useSessions.ts  useWebSocket.ts
livecontext/: __init__.py  cli.py
livecontext/core/: __init__.py  embedder.py  eviction.py  tokenizer.py
livecontext/proxies/: __init__.py  anthropic_proxy.py  base.py  ollama_proxy.py  openai_proxy.py
livecontext/sdk/: __init__.py  monitor.py
livecontext/server/: __init__.py  app.py  db.py  models.py  websocket.py
plans/: plan.md
tests/: test_core.py  test_models.py
